TestSuite/PascalABCTests/errors/err0007.pas
var a : integer;
begin
a := Inc(a);
end.